# life-history

./: Dockerfile  README.md  main.py  pyproject.toml
blog-template/: package.json  pnpm-lock.yaml
front/: eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
front/app/: page.tsx
src/: main.py
static/: backup.json
